<resources>
    <string name="app_name">PlayListMaker</string>
    <string name="title">Playlist maker</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="player">Плеер</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="support">Написать в поддержку</string>
    <string name="send">Поделиться приложением</string>
    <string name="send2">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="clear">Очистить</string>
    <string name="night">Темная тема</string>
    <string name="art">artwork</string>
    <string name="forward">forward</string>
    <string name="dot">dot</string>
    <string name="practicum">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="email">orlov1988brest@gmail.com</string>
    <string name="theme_message_to_developer">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_to_developer">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_ru">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="remainingTime">00:00</string>
    <string name="clear_history">Очистить историю</string>
    <string name="toPlaylist">Добавить в плейлист</string>
    <string name="toFavourites">Добавить в избранное</string>
    <string name="startStop">Воспроизведение</string>
    <string name="no_media">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание\n</string>
    <string name="create">Создать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="share">Поделиться</string>
    <string name="menu">Меню</string>
    <string name="playlist">Плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>
    <string name="empty_playlist_share_error">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track_confirmation">Хотите удалить трек?</string>
    <string name="delete_playlist_confirmation">Хотите удалить плейлист "%s"?</string>
    <string name="playlist_deleted">Плейлист удален</string>
    <string name="playlist_deletion_error">Не удалось удалить плейлист</string>
    <string name="share_chooser_title">Поделиться</string>
    <string name="share_playlist_empty_error">В этом плейлисте нет треков, которыми можно поделиться</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="save_playlist">Сохранить</string>
    <string name="create_playlist">Создать</string>
    <string name="exit_playlist_creation">Завершить создание плейлиста?</string>
    <string name="unsaved_data_warning">Все несохраненные данные будут потеряны!</string>
</resources>