<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/medium_padding"
    tools:context=".presentation.ui.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/medium_size"
        android:paddingTop="14dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size"
        android:fontFamily="@font/ys_display_medium"/>

    <Button style="@style/MainButton"
        android:id="@+id/search"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24"
        android:layout_marginTop="@dimen/top_padding"
        android:layout_marginBottom="@dimen/medium_padding"/>

    <Button style="@style/MainButton"
        android:id="@+id/media_library"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_24"/>

    <Button style="@style/MainButton"
        android:id="@+id/settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        android:layout_marginTop="@dimen/medium_padding"
        android:layout_marginBottom="28dp"/>

</LinearLayout>