<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.search.ui.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_searchFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment"
            app:popUpTo="@id/searchFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.mediaLibrary.ui.fragments.MediaLibraryFragment"
        android:label="@string/media_library"
        tools:layout="@layout/fragment_media_library">
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.settings.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlistmaker.player.ui.fragments.AudioPlayerFragment"
        android:label="@string/player"
        tools:layout="@layout/fragment_audio_player">

        <argument
            android:name="track"
            app:argType="com.example.playlistmaker.search.domain.models.Track" />
    </fragment>

</navigation>