<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_creating_playlist"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:layout_marginStart="@dimen/top_padding"
        android:layout_marginEnd="@dimen/icon_padding"
        android:layout_marginTop="23dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unsaved_data_will_be_lost"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:layout_marginStart="@dimen/top_padding"
        android:layout_marginEnd="@dimen/icon_padding"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:gravity="end|bottom"
        android:layout_marginStart="@dimen/top_padding"
        android:layout_marginEnd="@dimen/icon_padding"
        android:layout_marginBottom="@dimen/icon_padding">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnFinish"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/medium_padding"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnNo"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnYes"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/medium_padding"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>