<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".search.ui.fragments.SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_size">

        <TextView
            style="@style/Text22"
            android:text="@string/search"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/medium14_padding"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:layout_marginTop="56dp"
        android:paddingHorizontal="@dimen/medium_padding"
        android:paddingVertical="@dimen/icon_padding">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_search_16"
            android:paddingHorizontal="@dimen/small_padding"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableTint="@color/text_2"
            android:background="@drawable/search_field"
            android:radius="8dp"
            android:inputType="text"
            android:hint="@string/search"
            android:textColorHint="@color/text_2"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="@dimen/small_text_size"
            android:lines="1"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/icon_padding"
            android:contentDescription="@string/clear"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_clear_16"
            app:tint="@color/text_2"
            android:layout_gravity="center_vertical|end" />
    </FrameLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="@dimen/progressBar_size"
        android:layout_height="@dimen/progressBar_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="248dp"
        android:indeterminateTint="@color/progress_bar"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="124dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <LinearLayout style="@style/ErrorLayout"
        android:id="@+id/noConnection"
        android:visibility="gone">

        <ImageView style="@style/ErrorImage"
            android:src="@drawable/ic_no_connection_120" />

        <TextView style="@style/ErrorText"
            android:text="@string/no_connection" />

        <Button style="@style/RefreshButton"
            android:id="@+id/refreshButton"
            android:text="@string/refresh" />
    </LinearLayout>

    <LinearLayout style="@style/ErrorLayout"
        android:id="@+id/nothingFound"
        android:visibility="gone">

        <ImageView style="@style/ErrorImage"
            android:src="@drawable/ic_not_found_120" />

        <TextView style="@style/ErrorText"
            android:text="@string/not_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="132dp">

        <TextView
            style="@style/Text19"
            android:textFontWeight="500"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/search_history"
            android:gravity="center_horizontal"
            android:paddingTop="18dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/icon_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            style="@style/ClearHistoryButton"
            android:id="@+id/clearHistoryButton"
            android:text="@string/clear_history"
            android:layout_marginVertical="@dimen/top_padding"
            android:layout_gravity="center"/>

    </LinearLayout>
</FrameLayout>