<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".player.ui.fragments.AudioPlayerFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton style="@style/BackButton"
            android:id="@+id/back"
            android:contentDescription="@string/title"
            android:layout_marginStart="@dimen/ic_4"
            android:layout_marginTop="@dimen/ic_4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            style="@style/Text22"
            android:id="@+id/title"
            android:text="@string/new_playlist"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginTop="@dimen/medium14_padding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back"/>

        <ImageView
            android:id="@+id/cover_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintDimensionRatio="1:1"
            app:srcCompat="@drawable/ic_add_photo_100"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="@id/cover"
            app:layout_constraintBottom_toBottomOf="@id/cover"
            app:layout_constraintStart_toStartOf="@id/cover"
            app:layout_constraintEnd_toEndOf="@id/cover"
            android:contentDescription="@string/art"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:shapeAppearanceOverlay="@style/RoundedCornersOverlay"
            app:srcCompat="@drawable/add_photo"
            android:layout_marginTop="82dp"
            android:layout_marginStart="@dimen/top_padding"
            android:layout_marginEnd="@dimen/top_padding"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/art"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNameContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginTop="32dp"
            android:hint="@string/playlist_name_hint"
            app:boxStrokeColor="@color/box_stroke_color"
            app:layout_constraintTop_toBottomOf="@id/cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Text16"
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescriptionContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_padding"
            android:hint="@string/playlist_description_hint"
            app:boxStrokeColor="@color/box_stroke_color"
            app:layout_constraintTop_toBottomOf="@id/tilNameContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Text16"
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:maxLines="3"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tilDescriptionContainer"
            app:layout_constraintBottom_toTopOf="@id/btnCreate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/CreateButton"
            android:id="@+id/btnCreate"
            android:layout_marginHorizontal="@dimen/medium_padding"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/create"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>